using System.Collections;
using System.Collections.Generic;
using System.Linq;
using Unity.VisualScripting;
using UnityEngine;

public static class AnimationParameter
{
    public static string attackParameter = "Attack";
    public static string IdleParameter = "Idle";
    public static string MoveParameter = "Move";
    public static string RunParameter = "Run";
    public static string SitParameter = "Sit";
    public static string DeathParameter = "Death";
}
